<resources>
    <string name="app_name">LoginRegistration</string>
    <string name="todo" />
    <string name="login" />
    <string name="confirm_password" />
    <string name="enter_password" />
    <string name="enter_username" />
    <string name="logbutton">Login</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register_here">Register Here.</string>
    <string name="enter_name_first_last" />
    <string name="enter_phone_number" />
    <string name="enter_a_security_question" />
    <string name="enter_security_answer" />
    <string name="register" />
    <string name="nameFirstLast">Enter Name (First,Last)</string>
    <string name="phoneNumber">Enter Phone Number</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterSecurityQ">Enter a Security Question</string>
    <string name="enterSecurityA">Enter Security Answer</string>
    <string name="registerButton">Register</string>
    <string name="loginregister">Login</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title_activity_home">ScrollingActivity</string>
    //Dev
    <string name="edit_name">Full name?</string>
    <string name="edit_gender">Gender?</string>
    <string name="edit_weight">Weight in pounds? (###)</string>
    <string name="edit_height">Height in inches? (##)</string>
    <string name="edit_age">Age in years? (##)</string>
    <string name="edit_docName">Doctor name?</string>
    <string name="edit_docEmail">Doctor email?</string>
    <string name="edit_pharmName">Pharmacist name?</string>
    <string name="edit_pharmEmail">Pharmacist email?</string>
    <string name="edit_NofKin">Next of Kin name? (First Last)</string>
    <string name="edit_NofKinEmail">Next of Kin email?</string>
    <string name="edit_visitDate">Doctor visit date?</string>
    <string name="PersonalInfo_button">Save</string>
    <string name="PersonalInfoUpdate_button">Update</string>
    <string name="ValidatePersonalInfo_button">View</string>
    <string name="edit_username">Username?</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="medication">Medication:</string>
    <string name="time_to_take">Time to Take:</string>
    <string name="dosage">Dosage:</string>
    <string name="how_long">How Long:</string>
    <string name="medication_name">Medication name</string>
    <string name="time_of_day_to_take">Time of day to take</string>
    <string name="how_much_to_take">How much to take</string>
    <string name="how_many_days">How many days</string>
    <string name="medicationHome">Medication</string>
    <string name="medicationTextHome">Medication</string>
    <string name="monitoring_systemTextHome">Monitoring System</string>
    <string name="settingsHome">Settings</string>
    <string name="monitoring_systemHome">Monitoring System</string>
    <string name="backbutton">BackButton</string>
    <string name="title_activity_view_medication">ScrollingActivity</string>
    <string name="addmedicationbutton">addMedicationBUtton</string>
    <string name="view">View</string>
    <string name="personalinfobutton">personalInfoButton</string>
    <string name="personal_information">Personal Information</string>
    <string name="m_health">m_health</string>
    <string name="logo">logo</string>
    <string name="medications">Medications</string>
    <string name="myhealthpal">MyHealthPal</string>
    <string name="add_medication">Add Medication</string>
    <string name="settings">Settings</string>
    <string name="backbuttonsettings">backbuttonSettings</string>
    <string name="log_out">Log Out</string>
    <string name="logoutbutton">logOutButton</string>
    <string name="button">Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_usernameFP">Enter Username</string>
    <string name="enter_emailFP">Enter Email</string>
    <string name="reset_passwordFP">Reset Password</string>
    <string name="forgot_passwordFP">Forgot Password</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="enter_email_address1">Enter Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="changepasswordbutton">changepasswordbutton</string>
    <string name="textview_changePassword">Change Password</string>
    <string name="change_password2">Change Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password2">Enter New Password</string>
    <string name="confirm_new_password2">Confirm New Password</string>
    <string name="change_password1">Change Password</string>
    <string name="register_new_user">Register New User</string>
</resources>