<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="192dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EC3C3C"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/m_health_512" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:contentScrim="@color/teal_700"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="#EDBEB0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_Medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/medicationHome"
                app:srcCompat="@drawable/medicine" />

            <ImageButton
                android:id="@+id/imageButton_MonitoringSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/monitoring_systemHome"
                app:srcCompat="@drawable/monitoring" />

            <ImageButton
                android:id="@+id/imageButton_PersonalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/personalinfobutton"
                app:srcCompat="@drawable/personal_info" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_Medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/medicationTextHome"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_MonitoringSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/monitoring_systemTextHome"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_personalInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/personal_information"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_Settings"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/settingsHome"
                app:srcCompat="@android:drawable/ic_menu_manage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_settings"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>